JumpScript/tests/baselines/reference/parserGreaterThanTokenAmbiguity3.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity3.jump(1,1): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'number'.
tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity3.jump(1,8): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity3.jump (2 errors) ====
    1 >/**/> 2;
    ~~~~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'number'.
           ~
!!! error TS1109: Expression expected.